k8s/ruhestandsplaner-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ruhestandsplaner
  name: ruhestandsplaner
  namespace: ruhestandsplaner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ruhestandsplaner
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ruhestandsplaner
    spec:
      nodeSelector:
        agentpool: userpool
      imagePullSecrets:
        - name: dockerhub-pull
      containers:
        - name: ruhestandsplaner
          image: fluffysoft/ruhestandsplaner:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 3
            failureThreshold: 3
      restartPolicy: Always
