k8s/ruhestandsplaner-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: ruhestandsplaner
  name: ruhestandsplaner
  namespace: ruhestandsplaner
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: "http"
  selector:
    app: ruhestandsplaner
